[tool.poetry]
name = "test_nudity_detector"
version = "0.1.0"
description = "nude detector"
authors = ["Oscar Riojas <oscar@whaleandjaguar.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.5"
NudeNet = "^2.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
